# holoeml-experiment

./: .gitignore  README.md  amp_run.sh  amp_testconn.sh  exposure_settings.json  focus_run.sh  main.py  measurement_protocol.md  pyproject.toml  spectral_run.sh  test.ipynb  test_k10cr2.ipynb
amplitude/: control.py  devices.py  settings_store.py
amplitude/config/: config.py  config.yaml  exposure_settings.json  exposure_settings_xpol.json  exposure_settings_ypol.json  focus_settings.json
amplitude/measurements/: black.py  brightness.py  context.py  default_state.py  reference.py  sample.py
docs/: amplitude_measurement_protocol.md  camera_noise.md  lamp_stability.md  photon_transfer.md
instruments/config/: __init__.py  config.py  config.yaml
instruments/filterwheel/: filterwheel.py
instruments/kinesismotor/: __init__.py  kinesismotor.py
instruments/monochromator/: mono.py
instruments/powermeter/: __init__.py  powermeter.py
instruments/precisionpiezo/: __init__.py  precisionpiezo.py
instruments/pythorcam/: thorcam.py  utils.py  windows_setup.py
instruments/spectrometer/: __init__.py  spectrometer.py  utils.py
phase/: control.py
phase/config/: __init__.py  config.yaml  exposure_settings_xpol.json
scripts/: focus.py  spectral.py
scripts/amplitude/: check_results.ipynb  main.py  test.ipynb  test_baseops.ipynb  test_connection.py  test_fringes_wvl.ipynb  test_k10cr2.ipynb
scripts/phase/: piezo_scan.py  piezo_settle_diagnostic.py  piezo_step_response.py  piezo_voltage_calibration.py  piezo_voltage_readonly_check.py  (+1 more)
src/: control.py
(+26 files in other folders)
